==> quanmao/ebox_l_framework/FrameWork/stm32f1/eBox/ebox_rtc.cpp <==
#include "stm32f1xx_ll_exti.h"
#include "stm32f1xx_ll_rtc.h"
#include "stm32f1xx_ll_rcc.h"
#include "stm32f1xx_ll_pwr.h"
#include "ebox_nvic.h"
#include "ebox_rtc.h"
#include "ebox_config.h"
#define debug 1
#include "bsp_ebox.h"
#define DBG UART.printf
#define DEBUG(...) DBG("[RTC]  "), DBG(__VA_ARGS__)
#define DEBUG(...)
#define RTC_CFG_FLAG 0XA5A5
#define LSI_ASYNCH_PREDIV          ((uint32_t)0x9C3F)
#define LSE_ASYNCH_PREDIV          ((uint32_t)0x7FFF)
#define HSE_ASYNCH_PREDIV          ((uint32_t)62499)

__INLINE int8_t ebox_Enter_RTC_InitMode(void)
{
    uint32_t end = ENDTIME(1000);
    uint8_t ret = EOK;
	/* Disable the write protection for RTC registers */
    LL_RTC_DisableWriteProtection(RTC);
    /* Check if the Initialization mode is set */
    while (LL_RTC_IsActiveFlag_RTOF(RTC) != 1)
    {
        if (TIMEOUT(end, 1000))
        {
            DEBUG("init mode timeout,if use lse,please power on again！\r\n");
            ret = ETIMEOUT;
        }
    }
    return ret;
}

__INLINE int8_t ebox_Exit_RTC_InitMode(void)
{
    uint32_t end = ENDTIME(1000);
    LL_RTC_EnableWriteProtection(RTC);
    /* Check if the Initialization mode is set */
    while (LL_RTC_IsActiveFlag_RTOF(RTC) != 1)
    {
        if (TIMEOUT(end, 1000))
        {
            DEBUG("init mode timeout,if use lse,please power on again！\r\n");
            return ETIMEOUT;
        }
    }      
    return EOK;
}

int Rtc::begin(ClockS clock)
{
    int ret = ENG;

    if (clock == clock_lse)
    {
        if ((_getTimeFlag() == 0) || (LL_RCC_LSE_IsReady() != 1)) //时钟掉电，需要重新设置
        {
            if (_config(clock) != EOK)
            {
                DEBUG("LSE startup failed, please check crystal\r\n");
                _config(clock_lsi);
            }
			ret = EOK;
        }
#if debug
        else
        {

            /* Check if the Power On Reset flag is set */
            if (LL_RCC_IsActiveFlag_PORRST() != RESET)
            {
                DEBUG("Power On Reset occurred.... \r\n\n");
            }
            /* Check if the Pin Reset flag is set */
            else if (LL_RCC_IsActiveFlag_PINRST() != RESET)
            {
                DEBUG("External Reset occurred....\r\n\n ");
            }

            DEBUG("\r\n No need to configure RTC....");
            DEBUG("\r\n step 0....");
        }
#endif
    }
    else
    {
        ret = _config(clock);
    }
    /* Wait for RTC registers synchronization */
    ebox_WaitForSynchro_RTC();
    /* Enable the RTC Second */
    LL_RTC_EnableIT_SEC(RTC);
    ebox_Exit_RTC_InitMode();
    rtc_irq_init(Rtc::_irq_handler, (uint32_t)this);
    eboxNvicIrqEnable(RTC_IRQn);
    return ret;
}

int Rtc::_config(ClockS clock)
{
    uint32_t end = ENDTIME(5000);
    uint16_t ASYNC = LSI_ASYNCH_PREDIV;
    /* Enable PWR and BKP clocks */
    LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_PWR | LL_APB1_GRP1_PERIPH_BKP);
    LL_PWR_EnableBkUpAccess();

    /* Reset Backup Domain */
    LL_RCC_ForceBackupDomainReset();
    LL_RCC_ReleaseBackupDomainReset();

    if (clock == clock_lse)
    {
        if (LL_RCC_LSE_IsReady() == 0)
        {
            LL_RCC_LSE_Enable(); // 使能LSE
            while (LL_RCC_LSE_IsReady() != 1)
            {
                if (TIMEOUT(end, 5000))
                {
                    return ETIMEOUT;
                }
            }
        }
        ASYNC = LSE_ASYNCH_PREDIV;
        DEBUG("LSE  started successfully!\r\n");
    }
    else if (clock == clock_hse)
    {
        if (LL_RCC_HSE_IsReady() == 0) /* Enable HSE only if disabled.*/
        {
            LL_RCC_HSE_Enable();
            while (LL_RCC_HSE_IsReady() != 1)
            {
                if (TIMEOUT(end, 5000))
                {
                    return ETIMEOUT;
                }
            }
        }
        ASYNC = HSE_ASYNCH_PREDIV;
        DEBUG("HSE  started successfully!\r\n");
    }
    else
    {
        /* Enable LSI */
        LL_RCC_LSI_Enable();
        while (LL_RCC_LSI_IsReady() != 1)
        {
            if (TIMEOUT(end, 5000))
            {
                return ETIMEOUT;
            }
        }
        DEBUG("LSI started successfully!\r\n");
    }

    LL_RCC_SetRTCClockSource(clock << 8);
    /* Enable RTC Clock */
    LL_RCC_EnableRTC();

    ebox_Enter_RTC_InitMode();

    /* 设置时间格式&分频因子 */
    LL_RTC_SetAsynchPrescaler(RTC, ASYNC);

    return EOK;
}

void Rtc::setDate(Date_T date)
{
    uint32_t counter_time = 0, counter_alarm = 0, hours = 0;

    /* Change the current date */
    gDate.Year = date.Year;
    gDate.Month = date.Month;
    gDate.Day = date.Day;

    /* WeekDay set by user can be ignored because automatically calculated */
    gDate.WeekDay = _RTC_WeekDayNum(gDate.Year, gDate.Month, gDate.Day);
    date.WeekDay = gDate.WeekDay;

    /* Reset time to be aligned on the same day */
    /* Read the time counter*/
    counter_time = _getTimeCounter();

    /* Fill the structure fields with the read parameters */
    hours = counter_time / 3600;
    if (hours > 24)
    {
        /* Set updated time in decreasing counter by number of days elapsed */
        counter_time -= ((hours / 24) * 24 * 3600);
        /* Write time counter in RTC registers */
        _setTimeCounter(counter_time);

        /* Read current Alarm counter in RTC registers */
        counter_alarm = _getAlarmCounter();

        /* Set again alarm to match with new time if enabled */
        if (counter_alarm != (uint32_t)0xFFFFFFFF)
        {
            if (counter_alarm < counter_time)
            {
                /* Add 1 day to alarm counter*/
                counter_alarm += (uint32_t)(24 * 3600);
                //                RTC_WaitForLastTask();
                while (!LL_RTC_IsActiveFlag_RTOF(RTC))
                {
                };
                //                RTC_SetAlarm(counter_alarm);
                LL_RTC_DisableWriteProtection(RTC);
                LL_RTC_ALARM_Set(RTC, counter_alarm);
                LL_RTC_EnableWriteProtection(RTC);
            }
        }
    }
}

void Rtc::setTime(Time_T time)
{
    uint32_t counter_time = 0;

    counter_time = (uint32_t)(((uint32_t)time.Hours * 3600) +
                              ((uint32_t)time.Minutes * 60) +
                              ((uint32_t)time.Seconds));
    /* Wait for RTC registers synchronization */
    ebox_WaitForSynchro_RTC();
    /* Wait until last write operation on RTC registers has finished */
    while (!LL_RTC_IsActiveFlag_RTOF(RTC))
    {
    };
    _setTimeCounter(counter_time);
    _setTimeFlag(RTC_CFG_FLAG);
}

void Rtc::setAlarm(Time_T alarm, uint32_t mask)
{
    uint32_t counter_alarm = 0, counter_time;
    Time_T _time;

    counter_alarm = (uint32_t)(((uint32_t)alarm.Hours * 3600) +
                               ((uint32_t)alarm.Minutes * 60) +
                               ((uint32_t)alarm.Seconds));

    /*GetTime function to update date if counter higher than 24 hours */
    getTime(&_time);
    /* Convert time in seconds */
    counter_time = (uint32_t)(((uint32_t)_time.Hours * 3600) +
                              ((uint32_t)_time.Minutes * 60) +
                              ((uint32_t)_time.Seconds));

    /* Check that requested alarm should expire in the same day (otherwise add 1 day) */
    if (counter_alarm < counter_time)
    {
        /* Add 1 day to alarm counter*/
        counter_alarm += (uint32_t)(24 * 3600);
    }
    //    ebox_WaitForSynchro_RTC();
    /* Wait until last write operation on RTC registers has finished */
    while (!LL_RTC_IsActiveFlag_RTOF(RTC))
    {
    };
    //    RTC_SetAlarm(counter_alarm);
    _setAlarmCounter(counter_alarm);
}

void Rtc::setInterrupt(FunctionalState state, Rtc_IrqType type)
{
    /* Wait for RTC registers synchronization */
    ebox_WaitForSynchro_RTC();
    /* Wait until last write operation on RTC registers has finished */
    while (!LL_RTC_IsActiveFlag_RTOF(RTC))
    {
    };

    (state == ENABLE) ? (RTC->CRH |= (1 << type)) : (RTC->CRH &= ~(1 << type));
    // _nvic(state);
}

void Rtc::getTime(Time_T *time)
{
    uint32_t counter_time = 0, counter_alarm = 0, days_elapsed = 0, hours = 0;

    /* Wait for RTC registers synchronization */
    ebox_WaitForSynchro_RTC();
    /* Wait until last write operation on RTC registers has finished */
    while (!LL_RTC_IsActiveFlag_RTOF(RTC))
    {
    };

    counter_time = _getTimeCounter();

    /* Fill the structure fields with the read parameters */
    hours = counter_time / 3600;
    time->Minutes = (uint8_t)((counter_time % 3600) / 60);
    time->Seconds = (uint8_t)((counter_time % 3600) % 60);

    if (hours >= 24)
    {
        /* Get number of days elapsed from last calculation */
        days_elapsed = (hours / 24);
        /* Set Hours in RTC_TimeTypeDef structure*/
        time->Hours = (hours % 24);
        /* Read Alarm counter in RTC registers */
        counter_alarm = _getAlarmCounter();

        /* 计算alarm剩余时间 (only if set and not yet expired)*/
        if ((counter_alarm != (uint32_t)0xFFFFFFFF) && (counter_alarm > counter_time))
        {
            counter_alarm -= counter_time;
        }
        else
        {
            /* 如果 counter_alarm < counter_time ，alarm 已经发生且没有解除*/
            counter_alarm = (uint32_t)0xFFFFFFFF;
        }

        /* Set updated time in decreasing counter by number of days elapsed */
        counter_time -= (days_elapsed * 24 * 3600);
        /* Write time counter in RTC registers */
        //        RTC_SetCounter(counter_time);
        _setTimeCounter(counter_time);

        /* Set updated alarm to be set */
        if (counter_alarm != (uint32_t)0xFFFFFFFF)
        {
            counter_alarm += counter_time;
        }
        /* Write time counter in RTC registers */
        // while (!LL_RTC_IsActiveFlag_RTOF(RTC))
        // {
        // };
        //        RTC_SetAlarm(counter_alarm);
        _setAlarmCounter(counter_alarm);

        /* Update date */
        _updateDate(days_elapsed);
    }
    else
    {
        time->Hours = hours;
    }

    time->Format12_24 = 0;
}

    void RTC_IRQHandler(void)
    {
        if (LL_RTC_IsActiveFlag_SEC(RTC) != RESET)
        {
            irq_handler(rtc_irq_id, Sec_Irq);
            LL_RTC_ClearFlag_SEC(RTC);
        }
        if (LL_RTC_IsActiveFlag_ALR(RTC) != RESET)
        {
            irq_handler(rtc_irq_id, Alr_Irq);
            LL_RTC_ClearFlag_ALR(RTC);
        }
        if (LL_RTC_IsActiveFlag_OW(RTC) != RESET)
        {
            irq_handler(rtc_irq_id, Ow_Irq);
            LL_RTC_ClearFlag_OW(RTC);
        }
    }
