==> quanmao/ebox_l_framework/FrameWork/at32f421/eBox/ebox_rtc.cpp <==
#include "stm32f0xx_ll_exti.h"
#include "stm32f0xx_ll_rtc.h"
#include "stm32f0xx_ll_rcc.h"
#include "stm32f0xx_ll_pwr.h"
#include "ebox_nvic.h"
#include "ebox_rtc.h"
#include "ebox_config.h"
#define debug 0
#include "bsp_ebox.h"
#define DBG UART.printf
#define DEBUG(...) DBG("[RTC]  "), DBG(__VA_ARGS__)
#define DEBUG(...)
#define RTC_BKP_DATE_TIME_UPDTATED ((uint32_t)0x32F2)
#define LSI_ASYNCH_PREDIV          (99)		// 0-128
#define LSI_SYNCH_PREDIV           (399)	// 0-32768
#define LSE_ASYNCH_PREDIV          (0x7F)
#define LSE_SYNCH_PREDIV           (0xFF)
#define HSE_ASYNCH_PREDIV          (99)
#define HSE_SYNCH_PREDIV           (2499)

__INLINE int8_t ebox_Enter_RTC_InitMode(void)
{
    uint32_t end = ENDTIME(1000);
    LL_RTC_DisableWriteProtection(RTC);
    /* Set Initialization mode */
    LL_RTC_EnableInitMode(RTC);
    /* Check if the Initialization mode is set */
    while (LL_RTC_IsActiveFlag_INIT(RTC) != 1)
    {
        if (TIMEOUT(end, 1000))
        {
            DEBUG("init mode timeout,if use lse,please power on again！\r\n");
            return ETIMEOUT;
        }
    }
    return EOK;
}

__INLINE int8_t ebox_Exit_RTC_InitMode(void)
{

    LL_RTC_DisableInitMode(RTC);
    /* Wait for synchro */
    uint8_t ret = ebox_WaitForSynchro_RTC();
    LL_RTC_EnableWriteProtection(RTC);
    return ret;
}

int E_RTC::begin(ClockS clock)
{
    int ret = ENG;

    if (clock == clock_lse)
    {
        if ((_getTimeFlag() == 0) || (LL_RCC_LSE_IsReady() != 1))	//时钟掉电，需要重新设置
        {
            if (_config(clock) != EOK)
            {
                DEBUG("LSE startup failed, please check crystal\r\n");
                _config(clock_lsi);
            }
			ret = EOK;
        }
#if debug
        else	// 时钟保持工作，不需要设置
        {
            DEBUG("使用LSE,无需配置时钟,Alarm IT is %d \r\n", LL_RTC_IsEnabledIT_ALRA(RTC));

        }
#endif
    }
    else
    {
        ret = _config(clock);
    }
    rtc_irq_init(E_RTC::_irq_handler, (uint32_t)this);
    return ret;
}

int E_RTC::_config(ClockS clock)
{
    uint32_t end = ENDTIME(5000);
    uint16_t ASYNC = LSI_ASYNCH_PREDIV;
    uint16_t RTC_SYNCH_PREDIV = LSI_SYNCH_PREDIV;

    /* 使能PWR电源&备份域访问*/
    LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_PWR);
    LL_PWR_EnableBkUpAccess();
    /* Reset Backup Domain */
    LL_RCC_ForceBackupDomainReset();
    LL_RCC_ReleaseBackupDomainReset();

    if (clock == clock_lse)
    {
        if (LL_RCC_LSE_IsReady() == 0)
        {
            LL_RCC_LSE_Enable(); // 使能LSE
            while (LL_RCC_LSE_IsReady() != 1)
            {
                if (TIMEOUT(end, 5000))
                {
                    return ETIMEOUT;
                }
            }
				}
        ASYNC = LSE_ASYNCH_PREDIV;
        RTC_SYNCH_PREDIV = LSE_SYNCH_PREDIV;
        DEBUG("LSE  started successfully!\r\n");
    }
    else if (clock == clock_hse)
    {
        if (LL_RCC_HSE_IsReady() == 0) /* Enable HSE only if disabled.*/
        {
            LL_RCC_HSE_Enable();
            while (LL_RCC_HSE_IsReady() != 1)
            {
                if (TIMEOUT(end, 5000))
                {
                    return ETIMEOUT;
                }
            }
        }
        ASYNC = HSE_ASYNCH_PREDIV;
        RTC_SYNCH_PREDIV = HSE_SYNCH_PREDIV;
        DEBUG("HSE  started successfully!\r\n");
    }
    else
    {
        /* Enable LSI */
        LL_RCC_LSI_Enable();
        while (LL_RCC_LSI_IsReady() != 1)
        {
            if (TIMEOUT(end, 5000))
            {
                return ETIMEOUT;
            }
        }
        DEBUG("LSI started successfully!\r\n");
    }

    LL_RCC_SetRTCClockSource(clock << 8);
    /* Enable RTC Clock */
    LL_RCC_EnableRTC();

    ebox_Enter_RTC_InitMode();

    /* 设置时间格式&分频因子 */
    LL_RTC_SetHourFormat(RTC, LL_RTC_HOURFORMAT_24HOUR);

    LL_RTC_SetAsynchPrescaler(RTC, ASYNC); // 异步
    LL_RTC_SetSynchPrescaler(RTC, RTC_SYNCH_PREDIV);   // 同步

    /* 退出初始化模式并使能写保护 */
    ebox_Exit_RTC_InitMode();
   
    return EOK;
}

void E_RTC::setDate(Date_T date)
{
    /*##-1- 关闭写保护并进入初始化模式 */
    LL_RTC_DisableWriteProtection(RTC);
    ebox_Enter_RTC_InitMode();
    /* Set Date*/
    LL_RTC_DATE_Config(RTC, __LL_RTC_CONVERT_BIN2BCD(date.WeekDay), __LL_RTC_CONVERT_BIN2BCD(date.Day), __LL_RTC_CONVERT_BIN2BCD(date.Month), __LL_RTC_CONVERT_BIN2BCD(date.Year));

    /*##-3 退出初始化并打开写保护*/
    ebox_Exit_RTC_InitMode();
    LL_RTC_EnableWriteProtection(RTC);
}

void E_RTC::setTime(Time_T time)
{
    /*##-1- 关闭写保护并进入初始化模式 */
    LL_RTC_DisableWriteProtection(RTC);
    ebox_Enter_RTC_InitMode();

    /* Set Time*/
    LL_RTC_TIME_Config(RTC, __LL_RTC_CONVERT_BIN2BCD(time.Format12_24), __LL_RTC_CONVERT_BIN2BCD(time.Hours), __LL_RTC_CONVERT_BIN2BCD(time.Minutes), __LL_RTC_CONVERT_BIN2BCD(time.Seconds));

    /*##-3 退出初始化并打开写保护*/
    ebox_Exit_RTC_InitMode();
    LL_RTC_EnableWriteProtection(RTC);

    _setTimeFlag(0);
}

void E_RTC::setAlarm(Time_T alarm, uint32_t mask)
{
    /*##-1- 关闭写保护并进入初始化模式 */
    LL_RTC_DisableWriteProtection(RTC);
    ebox_Enter_RTC_InitMode();
    /*##-2- 关闭闹铃 */
    LL_RTC_ALMA_Disable(RTC);
    _updateTime(&alarm);
    /*##-3- 设置闹铃&屏蔽位 */
    LL_RTC_ALMA_ConfigTime(RTC, __LL_RTC_CONVERT_BIN2BCD(alarm.Format12_24), __LL_RTC_CONVERT_BIN2BCD(alarm.Hours), __LL_RTC_CONVERT_BIN2BCD(alarm.Minutes), __LL_RTC_CONVERT_BIN2BCD(alarm.Seconds));
    LL_RTC_ALMA_SetMask(RTC, mask);

    /*##-4- 打开闹铃,清除标志位 */
    LL_RTC_ALMA_Enable(RTC);
    LL_RTC_ClearFlag_ALRA(RTC);
    /* Enable IT Alarm */
    /*##-5 退出初始化并打开写保护*/
    ebox_Exit_RTC_InitMode();
    LL_RTC_EnableWriteProtection(RTC);
}

void E_RTC::setInterrupt(FunctionalState state, Rtc_IrqType type)
{
    LL_RTC_DisableWriteProtection(RTC);
    /* Clear the Alarm interrupt pending bit */
    LL_RTC_ClearFlag_ALRA(RTC);
    /* Enable IT Alarm */
    _nvic(state);
    (state == ENABLE) ? LL_RTC_EnableIT_ALRA(RTC) : LL_RTC_DisableIT_ALRA(RTC);
    LL_RTC_EnableWriteProtection(RTC);
}

void E_RTC::getTime(Time_T *time)
{
    time->Format12_24 = __LL_RTC_CONVERT_BCD2BIN(LL_RTC_TIME_GetFormat(RTC));
    time->Hours 		= __LL_RTC_CONVERT_BCD2BIN(LL_RTC_TIME_GetHour(RTC));
    time->Minutes 	= __LL_RTC_CONVERT_BCD2BIN(LL_RTC_TIME_GetMinute(RTC));
    time->Seconds 	= __LL_RTC_CONVERT_BCD2BIN(LL_RTC_TIME_GetSecond(RTC));
}

    void RTC_IRQHandler(void)
    {
        /* Get the Alarm interrupt source enable status */
        if (LL_RTC_IsEnabledIT_ALRA(RTC) != 0)
        {
            /* Get the pending status of the Alarm Interrupt */
            if (LL_RTC_IsActiveFlag_ALRA(RTC) != 0)
            {
                /* Alarm callback */
                irq_handler(rtc_irq_id, Sec_Irq);
                /* Clear the Alarm interrupt pending bit */
                LL_RTC_ClearFlag_ALRA(RTC);
            }
        }
        /* Clear the EXTI's Flag for RTC Alarm */
        LL_EXTI_ClearFlag_0_31(LL_EXTI_LINE_17);
    }
